--- a/locales/en.json
+++ b/locales/en.json
@@ -3,10 +3,11 @@
     "username": "Username",
     "password": "Password",
     "ip": "IP Address (local IP)",
+    "secure": "Use SSL connection",
     "port": "Port (optional - default: 5000)",
     "error": "No DiskStations found."
   },
   "diskstation": {
-      "wol": "Wake-Up can take up to 10 minutes. OnOff status will show 'ON' when DiskStation is succesfully booted."
+    "wol": "Wake-Up can take up to 10 minutes. OnOff status will show 'ON' when DiskStation is succesfully booted."
   }
 }
