--- a/locales/nl.json
+++ b/locales/nl.json
@@ -3,10 +3,11 @@
     "username": "Gebruikersnaam",
     "password": "Wachtwoord",
     "ip": "IP Addres (Lokaal IP)",
-    "port": "Poort (optioneel - standaard: 5000)",
+    "secure": "Gebruik SSL verbinding",
+    "port": "Poort (optioneel - standaard: 5000 of 5001 bij SSL)",
     "error": "Geen DiskStations gevonden."
   },
   "diskstation": {
-      "wol": "Wake-On-Lan kan tot 10 minuten duren. De AanUit-status zal 'AAN' tonen wanneer DiskStation succesvol is opgestart."
+    "wol": "Wake-On-Lan kan tot 10 minuten duren. De AanUit-status zal 'AAN' tonen wanneer DiskStation succesvol is opgestart."
   }
 }
