--- a/locales/de.json
+++ b/locales/de.json
@@ -2,7 +2,7 @@
   "pair": {
     "username": "Benutzername",
     "password": "Passwort",
-    "ip": "IP-Adresse (Lokale-IP)",
+    "ip": "IP-Adresse (Lokale-IP - SSL: Aus)",
     "secure": "SSL-Verbindung verwenden",
     "port": "Port (Optional - ursprünglich: 5000)",
     "error": "Keine DiskStations gefunden."
