--- a/locales/nl.json
+++ b/locales/nl.json
@@ -2,9 +2,9 @@
   "pair": {
     "username": "Gebruikersnaam",
     "password": "Wachtwoord",
-    "ip": "IP Addres (Lokaal IP)",
+    "ip": "IP Addres (Lokaal IP - SSL: UIT)",
     "secure": "Gebruik SSL verbinding",
-    "port": "Poort (optioneel - standaard: 5000 of 5001 bij SSL)",
+    "port": "Poort (optioneel - standaard: 5000)",
     "error": "Geen DiskStations gevonden."
   },
   "diskstation": {
