--- a/locales/nl.json
+++ b/locales/nl.json
@@ -9,6 +9,8 @@
     "error": "Geen DiskStations gevonden."
   },
   "diskstation": {
-    "wol": "Wake-On-Lan kan tot 10 minuten duren. De AanUit-status zal 'AAN' tonen wanneer DiskStation succesvol is opgestart."
+    "wol": "Wake-On-Lan kan tot 10 minuten duren. De AanUit-status zal 'AAN' tonen wanneer DiskStation succesvol is opgestart.",
+    "reboot": "Herstarten",
+    "shutdown": "Afsluiten"
   }
 }
