--- a/locales/en.json
+++ b/locales/en.json
@@ -9,6 +9,8 @@
     "error": "No DiskStations found."
   },
   "diskstation": {
-    "wol": "Wake-Up can take up to 10 minutes. OnOff status will show 'ON' when DiskStation is succesfully booted."
+    "wol": "Wake-Up can take up to 10 minutes. OnOff status will show 'ON' when DiskStation is succesfully booted.",
+    "reboot": "Rebooting",
+    "shutdown": "Shutting down"
   }
 }
