--- a/locales/en.json
+++ b/locales/en.json
@@ -6,11 +6,14 @@
     "ip": "IP Address (local IP - SSL: OFF)",
     "secure": "Use SSL connection",
     "port": "Port (optional - default: 5000)",
-    "error": "No DiskStations found."
+    "login": "Login",
+    "error": "Something went wrong. Check your login and 2FA (optional)",
+    "error_empty": "No DiskStations found."
   },
   "diskstation": {
     "wol": "Wake-Up can take up to 10 minutes. OnOff status will show 'ON' when DiskStation is succesfully booted.",
     "reboot": "Rebooting",
-    "shutdown": "Shutting down"
+    "shutdown": "Shutting down",
+    "override_onoff": "Device is always-on"
   }
 }
