--- a/locales/nl.json
+++ b/locales/nl.json
@@ -6,11 +6,14 @@
     "ip": "IP Addres (Lokaal IP - SSL: UIT)",
     "secure": "Gebruik SSL verbinding",
     "port": "Poort (optioneel - standaard: 5000)",
-    "error": "Geen DiskStations gevonden."
+    "login": "Inloggen",
+    "error": "Er is iets mis gegaan. Controleer je login en 2FA (optioneel)",
+    "error_empty": "Geen DiskStations gevonden."
   },
   "diskstation": {
     "wol": "Wake-On-Lan kan tot 10 minuten duren. De AanUit-status zal 'AAN' tonen wanneer DiskStation succesvol is opgestart.",
     "reboot": "Herstarten",
-    "shutdown": "Afsluiten"
+    "shutdown": "Afsluiten",
+    "override_onoff": "DiskStation is altijd-aan"
   }
 }
