--- a/locales/nl.json
+++ b/locales/nl.json
@@ -5,7 +5,7 @@
     "otp": "2FA Code (optioneel)",
     "ip": "IP Addres (Lokaal IP - SSL: UIT)",
     "secure": "Gebruik SSL verbinding",
-    "port": "Poort (optioneel - standaard: 5000)",
+    "port": "Poort (optioneel - standaard: 5000 / SSL: 5001)",
     "login": "Inloggen",
     "error": "Er is iets mis gegaan. Controleer je login en 2FA (optioneel)",
     "error_empty": "Geen DiskStations gevonden."
