OPT: ADD days/hours/minutes for time

--- a/locales/de.json
+++ b/locales/de.json
@@ -15,5 +15,10 @@
     "reboot": "Neustarten",
     "shutdown": "Herunterfahren",
     "override_onoff": "DiskStation is immer-auf"
+  },
+  "helpers": {
+    "days": "Tg",
+    "hours": "Std",
+    "minutes": "min"
   }
 }
