Some small corrections (German language)

--- a/locales/de.json
+++ b/locales/de.json
@@ -5,7 +5,7 @@
     "otp": "2FA Code (optional)",
     "ip": "IP-Adresse (Lokale-IP - SSL: Aus)",
     "secure": "SSL-Verbindung verwenden",
-    "port": "Port (Optional - ursprünglich: 5000 / SSL: 5001)",
+    "port": "Port (optional - ursprünglich: 5000 / SSL: 5001)",
     "login": "Anmelden",
     "error": "Etwas ist schief gelaufen. Überprüfen Sie Ihr Login und 2FA (optional)",
     "error_empty": "Keine DiskStations gefunden."
@@ -14,11 +14,11 @@
     "wol": "Wake-On-Lan kann bis zu 10 Minuten dauern. Der Ein/Aus-Status zeigt “EIN” an, wenn die DiskStation erfolgreich gebootet wurde.",
     "reboot": "Neustarten",
     "shutdown": "Herunterfahren",
-    "override_onoff": "DiskStation is immer-auf"
+    "override_onoff": "DiskStation ist immer-auf"
   },
   "helpers": {
     "days": "Tg",
     "hours": "Std",
-    "minutes": "min"
+    "minutes": "Min"
   }
 }
