--- a/locales/en.json
+++ b/locales/en.json
@@ -14,7 +14,8 @@
     "wol": "Wake-Up can take up to 10 minutes. OnOff status will show 'ON' when DiskStation is succesfully booted.",
     "reboot": "Rebooting",
     "shutdown": "Shutting down",
-    "override_onoff": "Device is always-on"
+    "override_onoff": "Device is always-on",
+    "file_invalid": "Wrong file format"
   },
   "helpers": {
     "days": "d",
