--- a/locales/de.json
+++ b/locales/de.json
@@ -14,7 +14,7 @@
     "wol": "Wake-On-Lan kann bis zu 10 Minuten dauern. Der Ein/Aus-Status zeigt “EIN” an, wenn die DiskStation erfolgreich gebootet wurde.",
     "reboot": "Neustarten",
     "shutdown": "Herunterfahren",
-    "override_onoff": "DiskStation ist immer-auf",
+    "override_onoff": "DiskStation ist immer-an",
     "file_invalid": "Falsches Dateiformat"
   },
   "helpers": {
